--- a/ExternalStyle2.css
+++ b/ExternalStyle2.css
@@ -1,5 +1,5 @@
 
-A:link {color: gray}
+A:link {color: grey}
 A:visited, A:active {color: green}
 A:hover {text-decoration: overline; color: teal}
 	
@@ -31,4 +31,14 @@ Form {
 	text-align: center; 
 	color: white; 
 	background-color: green}
+
+Nav{
+	top: 0%;
+	width: 100%;
+	height: 2.5em;
+	background-color: black;
+	position: sticky;
+	text-align: center;
+}
+
 
