--- a/ExternalStyle2.css
+++ b/ExternalStyle2.css
@@ -15,7 +15,7 @@ H3 {font-size: 10pt; text-align: center}
 H4 {text-align: center}
 H5 {font-size: 15pt}
 
-P {font-size: 10pt; font-family: monospace}
+P {font-size: 10pt; font-family: monospace; color: black;}
 
 Table {
 	width: 400px; 
@@ -28,52 +28,37 @@ Table {
 
 Form {
 	font-family: monospace; 
-	text-align: center; 
+	text-align: left; 
 	color: white; 
 	background-color: #333;
-	border-color: black;
-	border-width: .5em;
-	border-style: solid;
-	padding: 1em;
+	width: 100%;
+}
+Nav{
+	overflow: hidden;
+	background-color: black;
+	position: sticky;
+	width:100%;
+	top: 0;
 }
 
-
-form{
+A.navlink{
+	float: left;
+	display: block;
+	padding: 5px 5px;
+	color: white;
 	text-align: center;
+	font-size: 3vw;
 }
 
-@media only screen and (max-width: 600px){
-	Nav{
-		list-style-type: none;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		background-color: black;
-		position: sticky;
-		width:600px;
-		top: 0;
-	}
+Img{
+	margin: 0;
+	width: 100%;
+}
 
-	A.navlink{
-		float: left;
-		display: block;
-		padding: 5px 5px;
-		color: white;
-		text-align: center;
-		font-size: 20px;
-	}
-
-	Img{
-		border-radius: 1em;
-		border-color: black;
-		border-width: .5em;
-		border-style: solid;
-		padding: .5em;
-		margin: 0;
-		object-fit: scale-down;
-	}
-	Form{
-		width: 100%;
-	}
+input[type=text]{
+	width: 98%;
+	padding: 12px 20px;
+	margin: 0px 0 8px 5px;
+	box-sizing: border-box;
 }
 
