updated the code

--- a/ExternalStyle2.css
+++ b/ExternalStyle2.css
@@ -15,7 +15,10 @@ H3 {font-size: 10pt; text-align: center}
 H4 {text-align: center}
 H5 {font-size: 15pt}
 
-P {font-size: 10pt; font-family: monospace; color: black;}
+P {font-size: 10pt; 
+	font-family: monospace; 
+	color: black;
+	padding: 1em;}
 
 Table {
 	width: 400px; 
@@ -52,6 +55,9 @@ A.navlink{
 
 Img{
 	margin: 0;
+	max-width: 75%;
+	height: auto;
+	padding: .5em;
 	border-color: #333;
 	border-width: .5em;
 	border-style: solid;
