--- a/ExternalStyle2.css
+++ b/ExternalStyle2.css
@@ -93,6 +93,7 @@ input[type=text]{
 		left: 10%;
 		justify-content: center;
 		gap: 1em;
+		position: static;
 	}
 	
 	#object1{
@@ -125,6 +126,7 @@ input[type=text]{
 		grid-template-columns: repeat(4, 1fr);
 		grid-template-rows: repeat(4,1fr);
 		height: 80%;
+		position: static;
 	}
 	
 	#object1{
